--- a/styles.css
+++ b/styles.css
@@ -338,3 +338,12 @@ article .icon {
 .email-icon {
   height: 2.5rem;
 }
+
+/* Footer Section */
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+footer p {
+  text-align: center;
+}
